--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zloirock/core-js.git"
+    "url": "https://github.com/ivajkin/core-js.git"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --no-ci",
